--- a/pom.xml
+++ b/pom.xml
@@ -35,4 +35,19 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+  <scm>
+      <connection>scm:git:git@github.com:arunjosep/twip.git</connection>
+      <url>scm:git:git@github.com:arunjosep/twip.git</url>
+      <developerConnection>scm:git:git@github.com:arunjosep/twip.git</developerConnection>
+  </scm>
+  <build>
+    <plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-release-plugin</artifactId>
+			<version>2.5.3</version>
+		</plugin>
+	</plugins>
+  </build>
+
 </project>
