--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
 	</scm>
 	<build>
 		<plugins>
+<plugin>
+  <artifactId>maven-compiler-plugin</artifactId>
+<version>3.5.1</version>
+  <configuration>
+      
+      <target>1.8</target>
+  </configuration>
+</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
